fix countdown block link contrast

--- a/src/theme/ItaliaTheme/Blocks/_countdown.scss
+++ b/src/theme/ItaliaTheme/Blocks/_countdown.scss
@@ -7,7 +7,11 @@
   h5,
   h6,
   a {
-    color: $white;
+    &,
+    span {
+      color: $white;
+      text-decoration-color: $white;
+    }
   }
 
   .block-content {
